8159149: Several compiler tests fail with minimal VM
Reviewed-by: kvn, psandoz